Fixed chatbox overflow onto navbar bug at 1024px viewport

--- a/public/css/herostyles.css
+++ b/public/css/herostyles.css
@@ -153,7 +153,7 @@
   padding: 0 15px;
   overflow: hidden;
   position: relative;
-  z-index: 100;
+  z-index: 2;
   margin-top: 50px;
   display: flex;
   /* display: none; */
